--- a/jakeIRC.css
+++ b/jakeIRC.css
@@ -1,8 +1,13 @@
 /* CSS declarations go here */
 
+body {
+	width: 100%;
+	margin: 0 auto;
+	overflow: hidden;
+}
+
 .chat-window, .user-list, .channel-list {
 	min-height: 400px;
-	margin-right: 2.5px;
 
 	border: 1px solid #000;
 	border-radius: 10px;
@@ -18,7 +23,6 @@
 
 	border: 1px solid #000;
 	border-radius: 10px;
-	display: inline-block;
 }
 
 .input-field button, .input-field p {
