--- a/client/templates/ircPage.html
+++ b/client/templates/ircPage.html
@@ -1,32 +1,16 @@
-<head>
-  <title>jakeIRC</title>
-</head>
-
-<body>
-	{{> header}}
-	{{> ircPage}}
-</body>
-
-<template name="listmsg">
-	<p>{{timestamp}} | {{user}}: {{content}}</p>
-</template>
-
 <template name="ircPage">
 	<div class ="row">
 		<div class = "col-xs-1"></div>
-
 		<div class = "col-xs-2 channel-list">
 			<h4> Channels </h4>
 
 			<hr />
-
 			{{#each channels}}
 				<p> <a>{{channelname}}</a> </p>
 			{{/each}}
-
 			<hr />
 
-			<input class="form-control" placeholder="add channel"> 
+			<input class="form-control" placeholder="#channelName ..."> 
 			<p></p>
 			<button id="input-message">add channel</button>
 			<button id="input-message">remove channel</button>
@@ -40,6 +24,11 @@
 			{{#each messages}}
 				{{> listmsg}}
 			{{/each}}
+
+			<!-- {{#each messages}}
+				<p>{{this}}</p>
+			{{/each}} -->
+
 		</div>
 
 		<div class = "col-xs-2 user-list">
@@ -51,10 +40,8 @@
 				<p>{{username}}</p>
 			{{/each}}
 
-			<hr />
 		</div>
-
-		<div class ="col-xs-1"></div>
+		<div class = "col-xs-1"></div>
 	</div>	
 
 	<div class = "row">
@@ -63,15 +50,15 @@
 		<div class = "col-xs-10 input-field">
 
 			<div class="col-xs-2">
-				<p> user 1: </p>
+				<p> Jake </p>
 			</div>
 
 			<div class="col-xs-8"> 
-				<input class="form-control col-xs-10" placeholder="enter text here..."> 
+				<input id="msg-bar" class="form-control col-xs-10" placeholder="enter text here..."> 
 			</div>
 
 			<div class = "col-xs-2"> 
-				<button id="input-message">enter</button>
+				<button id="msg-btn">enter</button>
 			</div>
 		</div>
 
@@ -80,49 +67,43 @@
 
 </template>
 
+<template name="listmsg">
+	<p>{{timestamp}} | {{user}}: {{content}}</p>
+</template>
+
 <template name="header">
 	<header class = "row">
 		<div class ="col-xs-1"></div>
 		<div class="col-xs-10 nav-bar">
-
 			<div class="col-xs-5">
 				<h4>Jake's IRC Client</h4>
 			</div>
-
 			<div class="col-xs-1">
 				<button>
 					<a>Menu</a>
 				</button>
 			</div>
-
 			<div class="col-xs-1">
 				<button>
 					<a>View</a>
 				</button>
 			</div>
-
 			<div class="col-xs-1">
 				<button>
 					<a>Server</a>
 				</button>
 			</div>
-
 			<div class="col-xs-1">
 				<button>
 					<a>Window</a>
 				</button>
 			</div>
-
 			<div class="col-xs-1">
 				<button>
 					<a>Help</a>
 				</button>
 			</div>
-
 		</div>
-
 		<div class ="col-xs-1"></div>
-
 	</header>
-
 </template>
