add database functionality

--- a/client/templates/ircPage.html
+++ b/client/templates/ircPage.html
@@ -35,7 +35,7 @@
 		<div class = "col-xs-5 col-sm-7 col-md-8 chat-window">	
 
 			{{#each messages}}
-				<p>{{this}}</p>
+				<p>{{this.message}}</p>
 			{{/each}}
 
 		</div>
