--- a/client/templates/ircPage.html
+++ b/client/templates/ircPage.html
@@ -20,15 +20,14 @@
 		<div class = "col-xs-4 col-sm-3 col-md-2 channel-list">
 
 			{{#each channels}}
-				<p> <a>{{channelname}}</a> </p>
+				<p> <a>{{channelname}}</a> <a class="glyphicon glyphicon-remove-sign close-channel"> </a></p> 
 			{{/each}}
 
 			<hr />			
 
 			<input class="form-control" placeholder="#channelName ..."> 
 			<p></p>
-			<button id="input-message">add channel</button>
-			<button id="input-message">remove channel</button>
+			<button type="button" class="btn btn-default" id="input-message">add channel</button>
 		</div>
 
 		<!-- This is where the chat window is displayed -->
@@ -45,7 +44,7 @@
 
 			<div class="window-content">
 			{{#each users}}
-				<p>{{username}}</p>
+				<p>{{this.users}}</p>
 			{{/each}}
 			</div>
 
@@ -56,16 +55,16 @@
 
 		<div class = "col-xs-12 input-field">
 
-			<div class="col-xs-2">
-				<p> Jake </p>
+			<div class="col-xs-3">
+				<h4> Arch_Client : </h4>
 			</div>
 
-			<div class="col-xs-8"> 
-				<input id="msg-bar" class="form-control col-xs-10" placeholder="enter text here..."> 
+			<div class="col-xs-7"> 
+				<input id="msg-bar" class="form-control col-xs-10" placeholder="enter message here..."> 
 			</div>
 
 			<div class = "col-xs-2"> 
-				<button id="msg-btn">enter</button>
+				<button type="button" class="btn btn-default" id="msg-btn">enter</button>
 			</div>
 		</div>
 
@@ -76,18 +75,25 @@
 <template name="header">
 	<header class = "row">
 		<div class="col-xs-12 nav-bar">
-			<div class="col-xs-7">
+			<div class="col-xs-6">
 				<h4>Jake's IRC Client</h4>
 			</div>
 
-			<div class = "col-xs-5">
+			<div class = "col-md-3"></div>
+
+			<div class = "col-xs-2 col-md-1">
+				<button type="button" class="btn btn-default" id="menu-btn">Menu</button>
 			</div>
 
-			<!--<div class="col-xs-1">
-				<button>
-					<a>Menu</a>
-				</button>
+			<div class = "col-xs-2 col-md-1">
+				<button type="button" class="btn btn-default" id="server-btn">Server</button>
 			</div>
+
+			<div class = "col-xs-2 col-md-1">
+				<button type="button" class="btn btn-default" id="help-btn">Help</button>
+			</div>
+			<!--<div class="col-xs-1">
+
 			<div class="col-xs-1">
 				<button>
 					<a>View</a>
@@ -95,17 +101,7 @@
 			</div>
 			<div class="col-xs-1">
 				<button>
-					<a>Server</a>
-				</button>
-			</div>
-			<div class="col-xs-1">
-				<button>
 					<a>Window</a>
-				</button>
-			</div>
-			<div class="col-xs-1">
-				<button>
-					<a>Help</a>
 				</button>
 			</div>-->
 		</div>
