--- a/client/templates/ircPage.html
+++ b/client/templates/ircPage.html
@@ -44,7 +44,7 @@
 
 			<div class="window-content">
 			{{#each users}}
-				<p>{{this.users}}</p>
+				<p>{{this}}</p>
 			{{/each}}
 			</div>
 
@@ -55,11 +55,11 @@
 
 		<div class = "col-xs-12 input-field">
 
-			<div class="col-xs-3">
-				<h4> Arch_Client : </h4>
+			<div class="col-xs-3 col-md-2">
+				<h4> [Arch]Client : </h4>
 			</div>
 
-			<div class="col-xs-7"> 
+			<div class="col-xs-7 col-md-8"> 
 				<input id="msg-bar" class="form-control col-xs-10" placeholder="enter message here..."> 
 			</div>
 
@@ -75,11 +75,11 @@
 <template name="header">
 	<header class = "row">
 		<div class="col-xs-12 nav-bar">
-			<div class="col-xs-6">
+			<div class="col-xs-4 col-md-4">
 				<h4>Jake's IRC Client</h4>
 			</div>
 
-			<div class = "col-md-3"></div>
+			<div class = "col-md-4"></div>
 
 			<div class = "col-xs-2 col-md-1">
 				<button type="button" class="btn btn-default" id="menu-btn">Menu</button>
@@ -91,6 +91,10 @@
 
 			<div class = "col-xs-2 col-md-1">
 				<button type="button" class="btn btn-default" id="help-btn">Help</button>
+			</div>
+
+			<div class = "col-xs-2 col-md-1">
+				<button type="button" class="btn btn-default" id="logout-btn">Logout</button>
 			</div>
 			<!--<div class="col-xs-1">
 
