--- a/client/templates/ircPage.html
+++ b/client/templates/ircPage.html
@@ -7,7 +7,13 @@
 		</div>
 
 		<div class = "col-xs-5 col-sm-7 col-md-8">
-			<h4> Messages </h4>
+			<div class = "col-xs-5">
+				<h4> Messages </h4>
+			</div>
+
+			<div class = "col-xs-7">
+				<button type="button" class="btn btn-default" id="clear-btn">Clear</button>
+			</div>
 		</div>
 
 		<div class = "col-xs-3 col-sm-2">
@@ -23,11 +29,12 @@
 				<p> <a>{{channelname}}</a> <a class="glyphicon glyphicon-remove-sign close-channel"> </a></p> 
 			{{/each}}
 
-			<hr />			
-
+			<!-- Future channel additions
+			<hr />	
 			<input class="form-control" placeholder="#channelName ..."> 
 			<p></p>
 			<button type="button" class="btn btn-default" id="input-message">add channel</button>
+			-->
 		</div>
 
 		<!-- This is where the chat window is displayed -->
@@ -52,9 +59,8 @@
 	</div>	
 
 	<div class = "row">
-
+	<!-- This is where the user is able to input messages -->
 		<div class = "col-xs-12 input-field">
-
 			<div class="col-xs-3 col-md-2">
 				<h4> [Arch]Client : </h4>
 			</div>
@@ -72,14 +78,16 @@
 
 </template>
 
+<!-- This is the template for the navbar -->
 <template name="header">
 	<header class = "row">
 		<div class="col-xs-12 nav-bar">
-			<div class="col-xs-4 col-md-4">
+			<div class="col-xs-4">
 				<h4>Jake's IRC Client</h4>
 			</div>
+			<div class = "col-xs-8"></div>
 
-			<div class = "col-md-4"></div>
+			<!-- Future menu additions
 
 			<div class = "col-xs-2 col-md-1">
 				<button type="button" class="btn btn-default" id="menu-btn">Menu</button>
@@ -95,7 +103,8 @@
 
 			<div class = "col-xs-2 col-md-1">
 				<button type="button" class="btn btn-default" id="logout-btn">Logout</button>
-			</div>
+			</div>-->
+
 			<!--<div class="col-xs-1">
 
 			<div class="col-xs-1">
@@ -111,8 +120,3 @@
 		</div>
 	</header>
 </template>
-
-<!-- This template allows for the message to have multiple meteor parameters -->
-<!-- <template name="listmsg">
-	<p>{{timestamp}} | {{user}}: {{content}}</p>
-</template>-->
