--- a/client/templates/irc.html
+++ b/client/templates/irc.html
@@ -1,5 +1,5 @@
-<!-- This is the main templare ircPage -->
-<template name="ircPage">
+<!-- This is the main template for the irc -->
+<template name="irc">
 
 	<div class ="row category">
 		<div class = "col-xs-4 col-sm-3 col-md-2">
@@ -62,7 +62,7 @@
 	<!-- This is where the user is able to input messages -->
 		<div class = "col-xs-12 input-field">
 			<div class="col-xs-3 col-md-2">
-				<h4> [Arch]Client : </h4>
+				<h4> [Arch]Client: </h4>
 			</div>
 
 			<div class="col-xs-7 col-md-8"> 
@@ -76,47 +76,4 @@
 
 	</div>
 
-</template>
-
-<!-- This is the template for the navbar -->
-<template name="header">
-	<header class = "row">
-		<div class="col-xs-12 nav-bar">
-			<div class="col-xs-4">
-				<h4>Jake's IRC Client</h4>
-			</div>
-			<div class = "col-xs-8"></div>
-
-			<!-- Future menu additions
-
-			<div class = "col-xs-2 col-md-1">
-				<button type="button" class="btn btn-default" id="menu-btn">Menu</button>
-			</div>
-
-			<div class = "col-xs-2 col-md-1">
-				<button type="button" class="btn btn-default" id="server-btn">Server</button>
-			</div>
-
-			<div class = "col-xs-2 col-md-1">
-				<button type="button" class="btn btn-default" id="help-btn">Help</button>
-			</div>
-
-			<div class = "col-xs-2 col-md-1">
-				<button type="button" class="btn btn-default" id="logout-btn">Logout</button>
-			</div>-->
-
-			<!--<div class="col-xs-1">
-
-			<div class="col-xs-1">
-				<button>
-					<a>View</a>
-				</button>
-			</div>
-			<div class="col-xs-1">
-				<button>
-					<a>Window</a>
-				</button>
-			</div>-->
-		</div>
-	</header>
 </template>
