Add custom username, server, and channel options, implement iron router into connect and logout buttons, rename header buttons

--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -10,11 +10,11 @@
 			<!-- Future menu additions -->
 
 			<div class = "col-xs-2 col-md-2">
-				<button type="button" class="btn btn-default" id="menu-btn">Menu</button>
+				<button type="button" class="btn btn-default" id="irc-btn">IRC</button>
 			</div>
 
 			<div class = "col-xs-2 col-md-2">
-				<button type="button" class="btn btn-default" id="server-btn">Server</button>
+				<button type="button" class="btn btn-default" id="connect-btn">Connect</button>
 			</div>
 
 			<div class = "col-xs-2 col-md-2">
