--- a/client/templates/irc.html
+++ b/client/templates/irc.html
@@ -62,7 +62,7 @@
 	<!-- This is where the user is able to input messages -->
 		<div class = "col-xs-12 input-field">
 			<div class="col-xs-3 col-md-2">
-				<h4> [Arch]Client: </h4>
+				<h4> Chat: </h4>
 			</div>
 
 			<div class="col-xs-7 col-md-8"> 
