Fix client message send error

--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -10,7 +10,7 @@
 			<!-- Future menu additions -->
 
 			<div class = "col-xs-2 col-md-2">
-				<button type="button" class="btn btn-default" id="irc-btn">IRC</button>
+				<button type="button" class="btn btn-default" id="irc-btn">Chat</button>
 			</div>
 
 			<div class = "col-xs-2 col-md-2">
