--- a/client/templates/help.html
+++ b/client/templates/help.html
@@ -18,12 +18,12 @@
 				<p> Click the logout button to the far right in the header. </p>
 
 				<h3> What is JakeIRC? </h3>
-				<p> JakeIRC is a minimalistic web browser IRC client that uses html, css, js, meteor, and mongo. JakeIRC allows users to connect to IRC servers on the fly because it is web hosted. </p>
+				<p> JakeIRC is a minimalistic web browser IRC client that uses html, css, js, meteor, and mongo. JakeIRC allows users to connect to IRC servers on the fly because it is a web application. </p>
 
 				<h3> What is IRC? </h3>
 				<p> (IRC) Internet Relay Chat is an application layer protocol that allows communication in the form of text. The chat process uses a client/server networking model. IRC clients send messages to chat servers to be able to communicate with other clients. For more information on IRC check out the link below. </p>
 				<p> 
-					<a href="https://en.wikipedia.org/wiki/Internet_Relay_Chat" target="_blank">IRC Wiki Page </a>
+					<a href="http://www.irchelp.org/irchelp/irctutorial.html" target="_blank"> IRC Help Page </a>
 				</p>
 				
 			</div>
