--- a/client/templates/help.html
+++ b/client/templates/help.html
@@ -19,6 +19,9 @@
 
 				<h3> What is JakeIRC? </h3>
 				<p> JakeIRC is a minimalistic web browser IRC client that uses html, css, js, meteor, and mongo. JakeIRC allows users to connect to IRC servers on the fly because it is a web application. </p>
+				<p> 
+					<a href="https://github.com/jakeacole/jakeIRC" target="_blank"> jakeIRC on Github </a>
+				</p>
 
 				<h3> What is IRC? </h3>
 				<p> (IRC) Internet Relay Chat is an application layer protocol that allows communication in the form of text. The chat process uses a client/server networking model. IRC clients send messages to chat servers to be able to communicate with other clients. For more information on IRC check out the link below. </p>
