--- a/client/templates/irc.html
+++ b/client/templates/irc.html
@@ -26,7 +26,7 @@
 		<div class = "col-xs-4 col-sm-3 col-md-2 channel-list">
 
 			{{#each channels}}
-				<p> <a>{{channelname}}</a> <a class="glyphicon glyphicon-remove-sign close-channel"> </a></p> 
+				<p> <a>{{this}}</a> <a class="glyphicon glyphicon-remove-sign close-channel"> </a></p> 
 			{{/each}}
 
 			<!-- Future channel additions
