--- a/client/templates/connect.html
+++ b/client/templates/connect.html
@@ -3,12 +3,13 @@
 	<div class = "row">
 
 		<div class = "col-xs-12 connect-field">
+		<h2> Connect to a channel </h2>
 			<div class = "col-xs-12">
 				<div class="col-xs-4">
 					<h4> Username: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="user-name" class="form-control col-xs-10" placeholder="enter username (ex. [Arch]Client)"> 
+					<input id="user-name" class="form-control col-xs-10" placeholder="enter username (ex. jakeIRC)"> 
 				</div>
 			</div>
 
