--- a/client/templates/help.html
+++ b/client/templates/help.html
@@ -12,22 +12,18 @@
 
 				<h3> Chatting in a channel </h3>
 				<p> To chat in a channel, enter your specified message into the input field at the bottom of the screen. Hit enter or click the enter button to send your message. </p>
-				<p> You can see the channel you are connected to in the left column. The center column is where messages are displayed. The right column stores the current user list in your specified channel. </p>
+				<p> You can see the channel you are connected to in the left column. The center column is where chat messages are displayed. The right column stores the current user list in your specified channel. </p>
 
-				<h3> Logging Out </h3>
+				<h3> Logging out </h3>
 				<p> Click the logout button to the far right in the header. </p>
 
 				<h3> What is JakeIRC? </h3>
-				<p> JakeIRC is a minimalistic web browser IRC client that uses html, css, js, meteor, and mongo. JakeIRC allows users to connect to IRC servers on the fly because it is a web application. </p>
-				<p> 
-					<a href="https://github.com/jakeacole/jakeIRC" target="_blank"> jakeIRC on Github </a>
-				</p>
+				<p> JakeIRC is a minimalistic web browser IRC client that uses html, css, js, meteor, and mongo. JakeIRC allows users to connect to IRC servers seamlessly without having to install any programs on their local machines. </p>
+				<p> <a href="https://github.com/jakeacole/jakeIRC" target="_blank"> jakeIRC on Github </a> </p>
 
 				<h3> What is IRC? </h3>
 				<p> (IRC) Internet Relay Chat is an application layer protocol that allows communication in the form of text. The chat process uses a client/server networking model. IRC clients send messages to chat servers to be able to communicate with other clients. For more information on IRC check out the link below. </p>
-				<p> 
-					<a href="http://www.irchelp.org/irchelp/irctutorial.html" target="_blank"> IRC Help Page </a>
-				</p>
+				<p> <a href="http://www.irchelp.org/irchelp/irctutorial.html" target="_blank"> IRC Help Page </a> </p>
 				
 			</div>
 		</div>
