--- a/client/templates/irc.html
+++ b/client/templates/irc.html
@@ -21,40 +21,38 @@
 		</div>
 	</div>
 
-	<div class ="row">
-		<!-- This is where the list of channels are displayed -->
-		<div class = "col-xs-4 col-sm-3 col-md-2 channel-list">
-
-			{{#each channels}}
-				<p> <a>{{this}}</a> <a class="glyphicon glyphicon-remove-sign close-channel"> </a></p> 
-			{{/each}}
-
-			<!-- Future channel additions
+	<!-- Future channel additions
 			<hr />	
 			<input class="form-control" placeholder="#channelName ..."> 
 			<p></p>
 			<button type="button" class="btn btn-default" id="input-message">add channel</button>
 			-->
+			
+	<div class ="row">
+		<!-- This is where the list of channels are displayed -->
+		<div class = "col-xs-4 col-sm-3 col-md-2 channel-list">
+			{{#each channels}}
+				<p> 
+					<a>{{this}}</a> 
+					<a class="glyphicon glyphicon-remove-sign close-channel"> </a> 
+				</p> 
+			{{/each}}
 		</div>
 
 		<!-- This is where the chat window is displayed -->
 		<div class = "col-xs-5 col-sm-7 col-md-8 chat-window">	
-
 			{{#each messages}}
 				<p>{{this.message}}</p>
 			{{/each}}
-
 		</div>
 
 		<!-- This is where the list of users are displayed -->
 		<div class = "col-xs-3 col-sm-2 user-list">
-
 			<div class="window-content">
 			{{#each users}}
 				<p>{{this}}</p>
 			{{/each}}
 			</div>
-
 		</div>
 	</div>	
 
