--- a/client/templates/connect.html
+++ b/client/templates/connect.html
@@ -27,7 +27,7 @@
 					<h4> Channel: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="channel-name" class="form-control col-xs-10" placeholder="enter channel (ex. #winter-irc-test)"> 
+					<input id="channel-name" class="form-control col-xs-10" placeholder="enter channel (ex. #A100Chat)"> 
 				</div>
 			</div>
 
