Add accounts-ui and password, Refactor code 'users' to 'nicks', minor html and css tweaks

--- a/client/templates/connect.html
+++ b/client/templates/connect.html
@@ -6,10 +6,10 @@
 		<h2> Connect to a channel </h2>
 			<div class = "col-xs-12">
 				<div class="col-xs-4">
-					<h4> Username: </h4>
+					<h4> Nickname: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="user-name" class="form-control col-xs-10" placeholder="enter username (ex. jakeIRC)"> 
+					<input id="nick-name" class="form-control col-xs-10" placeholder="enter nickname (ex. jakeIRC)"> 
 				</div>
 			</div>
 
@@ -27,7 +27,7 @@
 					<h4> Channel: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="channel-name" class="form-control col-xs-10" placeholder="enter channel (ex. #A100Chat)"> 
+					<input id="channel-name" class="form-control col-xs-10" placeholder="enter channel (ex. #winter-irc)"> 
 				</div>
 			</div>
 
