--- a/client/templates/irc.html
+++ b/client/templates/irc.html
@@ -49,7 +49,7 @@
 		<!-- This is where the list of users are displayed -->
 		<div class = "col-xs-3 col-sm-2 user-list">
 			<div class="window-content">
-			{{#each users}}
+			{{#each nicks}}
 				<p>{{this}}</p>
 			{{/each}}
 			</div>
