--- a/client/style.css
+++ b/client/style.css
@@ -23,7 +23,8 @@ h1, h2, h3, h4, p {
 
 .category{
 	height: 45px;
-	margin-bottom: 10px;
+	border-bottom-right-radius: 0px !important;
+	border-bottom-left-radius: 0px !important;
 }
 
 .chat-window, .user-list, .channel-list, .input-field,
@@ -39,18 +40,25 @@ h1, h2, h3, h4, p {
 .chat-window {
 	border-radius: 0px !important;
 	font-size: 120%;
+	border-top: 0px !important;
 }
 
 .user-list {
+	border-top-right-radius: 0px !important;
 	border-top-left-radius: 0px !important;
 	border-bottom-left-radius: 0px !important;
+	
 	border-left: 0px !important;
+	border-top: 0px !important;
 }
 
 .channel-list {
+	border-top-left-radius: 0px !important;
 	border-top-right-radius: 0px !important;
 	border-bottom-right-radius: 0px !important;
+	
 	border-right: 0px !important;
+	border-top: 0px !important;
 }
 
 .chat-window, .user-list, .channel-list {
@@ -80,15 +88,11 @@ h1, h2, h3, h4, p {
 }
 
 .connect-field {
-	margin-top: 10px;
-
 	border: 1px solid #000;
 	border-radius: 10px;
 }
 
 .help-field {
-	margin-top: 10px;
-
 	border: 1px solid #000;
 	border-radius: 10px;
 }
@@ -141,6 +145,6 @@ a:active, a:hover {
 }
 
 #clear-btn {
-	margin-top: 2.5px;
+	margin-top: 5px;
 	float: right;
 }
