--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -3,12 +3,13 @@
 	<header class = "row">
 		<div class="col-xs-12 nav-bar">
 			<div class="col-xs-4">
-				<h4>Jake's IRC Client</h4>
+				<h4>jakeIRC</h4>
 			</div>
 
 			<!--<div class = "col-xs-8"></div>-->
 			<!-- Future menu additions -->
 
+			{{#if currentUser}}
 			<div class = "col-xs-2 col-md-2">
 				<button type="button" class="btn btn-default" id="irc-btn">Chat</button>
 			</div>
@@ -24,6 +25,20 @@
 			<div class = "col-xs-2 col-md-2">
 				<button type="button" class="btn btn-default" id="logout-btn">Logout</button>
 			</div>
+
+			{{else}}
+
+			<div class = "col-xs-4 col-md-4"> </div>
+
+			<div class = "col-xs-2 col-md-2">
+				<button type="button" class="btn btn-default" id="help-btn">Help</button>
+			</div>
+
+			<div class = "col-xs-2 col-md-2">
+                <button type="button" class="btn btn-default" id="login-btn">Login</button>
+			</div>
+
+			{{/if}}
 
 			<!--<div class="col-xs-1">
 
