Update help page

--- a/client/templates/help.html
+++ b/client/templates/help.html
@@ -6,6 +6,15 @@
 			<div class = "col-xs-12">
 				<h1> Help Page for JakeIRC</h1>
 
+				<h3> Registering an account </h3>
+				<p> Enter your email and password into the register user fields, and submit them. Once this has completed, your account will be registered </p>
+
+				<h3> Logging in </h3>
+				<p> Once your account is registered, enter in your email address and the specified password you set for your account. This will allow you to use jakeIRC. </p>
+
+				<h3> Logging out </h3>
+				<p> Click the logout button to the far right in the header. </p>
+
 				<h3> Connecting to a channel </h3>
 				<p> Click on the server button to connect to a specified channel. </p>
 				<p> Fill out the fields with your username, server, and channel. Submit these fields when you are certain they are filled with the correct information that you want. </p>
@@ -14,8 +23,8 @@
 				<p> To chat in a channel, enter your specified message into the input field at the bottom of the screen. Hit enter or click the enter button to send your message. </p>
 				<p> You can see the channel you are connected to in the left column. The center column is where chat messages are displayed. The right column stores the current user list in your specified channel. </p>
 
-				<h3> Logging out </h3>
-				<p> Click the logout button to the far right in the header. </p>
+				<h3> Commands </h3>
+				<p> Type in /command to see the list of available commands in the chat input field <p>
 
 				<h3> What is JakeIRC? </h3>
 				<p> JakeIRC is a minimalistic web browser IRC client that uses html, css, js, meteor, and mongo. JakeIRC allows users to connect to IRC servers seamlessly without having to install any programs on their local machines. </p>
