Minor login gui updates, update help page

--- a/client/templates/help.html
+++ b/client/templates/help.html
@@ -24,7 +24,7 @@
 				<p> You can see the channel you are connected to in the left column. The center column is where chat messages are displayed. The right column stores the current user list in your specified channel. </p>
 
 				<h3> Commands </h3>
-				<p> Type in /command to see the list of available commands in the chat input field <p>
+				<p> Type in /command to see the list of available commands in the chat input field </p>
 
 				<h3> What is JakeIRC? </h3>
 				<p> JakeIRC is a minimalistic web browser IRC client that uses html, css, js, meteor, and mongo. JakeIRC allows users to connect to IRC servers seamlessly without having to install any programs on their local machines. </p>
