--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -29,9 +29,9 @@
 				</div>
 				<div class = "col-xs-3"></div>
 			</div>
+		</div>
 
-			<hr />
-
+		<div class = "col-xs-12 login-field">
 			<h2> Register to jakeIRC </h2>
 			<div class = "col-xs-12">
 				<div class="col-xs-4">
