--- a/client/templates/connect.html
+++ b/client/templates/connect.html
@@ -5,8 +5,10 @@
 		<div class = "col-xs-12 connect-field">
 		<h2> Favorite Channels </h2>
 			<div class = "col-xs-12">
-				<div class="col-xs-3"></div>
-				<div class="col-xs-3">
+				<div class="col-xs-2">
+					<h4> Connect </h4>
+				</div>
+				<div class="col-xs-2">
 					<h4> Nickname </h4>
 				</div>
 				<div class="col-xs-3"> 
@@ -15,13 +17,22 @@
 				<div class="col-xs-3"> 
 					<h4> Channel </h4>
 				</div>
+				<div class ="col-xs-2">
+					<h4> Delete </h4>
+				</div>
 			</div>
 
+			<!-- {{#each xyz}}
+
+				{{this}}
+
+			{{/each}} -->
+
 			<div class = "col-xs-12">
-				<div class="col-xs-3">
-					<button type="button" class="btn btn-default fav-connect">favorite channel name #1</button>
+				<div class="col-xs-2">
+					<button type="button" class="btn btn-default fav-connect">connect</button>
 				</div>
-				<div class="col-xs-3">
+				<div class="col-xs-2">
 					<h4> Jake </h4>
 				</div>
 				<div class="col-xs-3"> 
@@ -29,6 +40,9 @@
 				</div>
 				<div class="col-xs-3"> 
 					<h4> #a100chat </h4>
+				</div>
+				<div class = "col-xs-2">
+					<button type="button" class="btn btn-default fav-delete">delete</button>
 				</div>
 			</div>
 		</div>
@@ -78,7 +92,7 @@
 					<h4> Nickname: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="fav-name" class="form-control col-xs-10" placeholder="enter nickname (ex. jakeIRC)"> 
+					<input id="fav-nick" class="form-control col-xs-10" placeholder="enter nickname (ex. jakeIRC)"> 
 				</div>
 			</div>
 
