--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -9,7 +9,7 @@
 					<h4> Email: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="login-email" type="email" class="form-control col-xs-10" placeholder="enter email"> 
+					<input id="login-email" type="email" class="form-control" placeholder="enter email"> 
 				</div>
 			</div>
 
@@ -18,7 +18,7 @@
 					<h4> Password: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="login-password" type="password" class="form-control col-xs-10" placeholder="enter password"> 
+					<input id="login-password" type="password" class="form-control" placeholder="enter password"> 
 				</div>
 			</div>
 
@@ -38,7 +38,7 @@
 					<h4> Email: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="register-email" type="email" class="form-control col-xs-10" placeholder="enter email"> 
+					<input id="register-email" type="email" class="form-control" placeholder="enter email"> 
 				</div>
 			</div>
 
@@ -47,7 +47,7 @@
 					<h4> Password: </h4>
 				</div>
 				<div class="col-xs-8"> 
-					<input id="register-password" type="password" class="form-control col-xs-10" placeholder="enter password"> 
+					<input id="register-password" type="password" class="form-control" placeholder="enter password"> 
 				</div>
 			</div>
 
