--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -2,39 +2,41 @@
 <template name="header">
 	<header class = "row">
 		<div class="col-xs-12 nav-bar">
-			<div class="col-xs-4">
+			<div class="col-xs-2">
 				<h4>jakeIRC</h4>
 			</div>
 
-			<!--<div class = "col-xs-8"></div>-->
-			<!-- Future menu additions -->
-
 			{{#if currentUser}}
-			<div class = "col-xs-2 col-md-2">
+			<!--
+			<div class = "col-xs-2">
+				<h4> {{#each currentnick}}{{this}}{{/each}} </h4>
+			</div>
+			-->
+			<div class = "col-xs-2">
 				<button type="button" class="btn btn-default" id="connect-btn">Connect</button>
 			</div>
 			
-			<div class = "col-xs-2 col-md-2">
+			<div class = "col-xs-2">
 				<button type="button" class="btn btn-default" id="irc-btn">Chat</button>
 			</div>
 
-			<div class = "col-xs-2 col-md-2">
+			<div class = "col-xs-2">
 				<button type="button" class="btn btn-default" id="help-btn">Help</button>
 			</div>
 
-			<div class = "col-xs-2 col-md-2">
+			<div class = "col-xs-2">
 				<button type="button" class="btn btn-default" id="logout-btn">Logout</button>
 			</div>
 
 			{{else}}
 
-			<div class = "col-xs-4 col-md-4"> </div>
+			<div class = "col-xs-4"> </div>
 
-			<div class = "col-xs-2 col-md-2">
+			<div class = "col-xs-2">
 				<button type="button" class="btn btn-default" id="help-btn">Help</button>
 			</div>
 
-			<div class = "col-xs-2 col-md-2">
+			<div class = "col-xs-2">
                 <button type="button" class="btn btn-default" id="login-btn">Login</button>
 			</div>
 
