Update GUI, re-implement channel connect

--- a/client/templates/help.html
+++ b/client/templates/help.html
@@ -15,9 +15,15 @@
 				<h3> Logging out </h3>
 				<p> Click the logout button to the far right in the header. </p>
 
+				<h3> Updating your Nickname </h3>
+				<p> Once you are logged in you can update your nickname in the connect page by entering in a new nickname and clicking the update nickname button. </p>
+
 				<h3> Connecting to a channel </h3>
 				<p> Click on the server button to connect to a specified channel. </p>
-				<p> Fill out the fields with your username, server, and channel. Submit these fields when you are certain they are filled with the correct information that you want. </p>
+				<p> Fill out the fields with the server and channel. Submit these fields when you are certain they are filled with the correct information that you want. </p>
+
+				<h3> Adding favorite channels </h3>
+				<p> You can add channels to your favorite list on the connect page. You can enter in the server and channel and save it as a favorite </p>
 
 				<h3> Chatting in a channel </h3>
 				<p> To chat in a channel, enter your specified message into the input field at the bottom of the screen. Hit enter or click the enter button to send your message. </p>
