--- a/client/templates/help.html
+++ b/client/templates/help.html
@@ -7,7 +7,7 @@
 				<h1> Help Page for JakeIRC</h1>
 
 				<h3> Registering an account </h3>
-				<p> Enter your email and password into the register user fields, and submit them. Once this has completed, your account will be registered </p>
+				<p> Enter your email and password into the register user fields, and submit them. Once this has completed, your account will be registered. </p>
 
 				<h3> Logging in </h3>
 				<p> Once your account is registered, enter in your email address and the specified password you set for your account. This will allow you to use jakeIRC. </p>
@@ -23,14 +23,14 @@
 				<p> Fill out the fields with the server and channel. Submit these fields when you are certain they are filled with the correct information that you want. </p>
 
 				<h3> Adding favorite channels </h3>
-				<p> You can add channels to your favorite list on the connect page. You can enter in the server and channel and save it as a favorite </p>
+				<p> You can add channels to your favorite list on the connect page. You can enter in the server and channel and save it as a favorite. </p>
 
 				<h3> Chatting in a channel </h3>
 				<p> To chat in a channel, enter your specified message into the input field at the bottom of the screen. Hit enter or click the enter button to send your message. </p>
 				<p> You can see the channel you are connected to in the left column. The center column is where chat messages are displayed. The right column stores the current user list in your specified channel. </p>
 
 				<h3> Commands </h3>
-				<p> Type in /command to see the list of available commands in the chat input field </p>
+				<p> Type in /command to see the list of available commands in the chat input field. </p>
 
 				<h3> What is JakeIRC? </h3>
 				<p> JakeIRC is a minimalistic web browser IRC client that uses html, css, js, meteor, and mongo. JakeIRC allows users to connect to IRC servers seamlessly without having to install any programs on their local machines. </p>
