--- a/client/style.css
+++ b/client/style.css
@@ -27,13 +27,13 @@ h1, h2, h3, h4, p {
 	border-bottom-left-radius: 0px !important;
 }
 
-.chat-window, .user-list, .channel-list, 
+.chat-window, .user-list, .channel-list, .log-window,
 .input-field, .connect-field, .login-field, 
 .help-field, .nav-bar, .category {
 	background: #F8F8F8;
 }
 
-.chat-window, .user-list, 
+.chat-window, .user-list, .log-window,
 .channel-list, .category {
 	border: 1px solid #000;
 	border-radius: 10px;
@@ -66,6 +66,21 @@ h1, h2, h3, h4, p {
 .chat-window, .user-list, .channel-list {
 	height: 330px;
 
+	padding-top: 5px;
+	padding-bottom: 5px;
+
+	overflow: hidden;
+    overflow-y: auto;
+}
+
+.log-window {
+	height: 450px;
+	font-size: 120%;
+
+	border-top-left-radius: 0px !important;
+	border-top-right-radius: 0px !important;
+	border-top: 0px !important;
+	
 	padding-top: 5px;
 	padding-bottom: 5px;
 
