--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -2,7 +2,7 @@
 <template name="header">
 	<header class = "row">
 		<div class="col-xs-12 nav-bar">
-			<div class="col-xs-4">
+			<div class="col-xs-2">
 				<h4>jakeIRC</h4>
 			</div>
 
@@ -16,6 +16,10 @@
 			</div>
 
 			<div class = "col-xs-2">
+				<button type="button" class="btn btn-default" id="logs-btn">Logs</button>
+			</div>
+
+			<div class = "col-xs-2">
 				<button type="button" class="btn btn-default" id="help-btn">Help</button>
 			</div>
 
@@ -25,7 +29,7 @@
 
 			{{else}}
 
-			<div class = "col-xs-4"> </div>
+			<div class = "col-xs-6"> </div>
 
 			<div class = "col-xs-2">
 				<button type="button" class="btn btn-default" id="help-btn">Help</button>
